fixing alignment on set / hide shares link, background on button
Ignore-this: ebe2add7edee00bdf60d1cba272bcca0

darcs-hash:20110702150853-08cd0-058522726eada4035ad9d58e3868b976587ebb93

--- a/resources/static/css/main.css
+++ b/resources/static/css/main.css
@@ -652,6 +652,10 @@ form.add-share button, #purchases .entry-form button, .edit-person button {
 	position: relative;
 }
 
+form.add-share button {
+  background-color: white;
+}
+
 form.add-share button, #purchases .entry-form button {
 	margin-right: -40px;
 }
@@ -680,6 +684,7 @@ form.add-share button:hover, #purchases .entry-form button:hover, .edit-person b
   background-color: white;
   padding: 5px;
   font-size: 14px;
+  text-align: right;
 }
 
 .shares-box.hidden {
@@ -689,7 +694,7 @@ form.add-share button:hover, #purchases .entry-form button:hover, .edit-person b
 
 
 .shares-box.showing {
-/*  z-index: 20;*/
+  z-index: 20;
   position: relative;
 }
 
